--- a/templates/commands.htm
+++ b/templates/commands.htm
@@ -8,4 +8,7 @@
     <a href=http://127.0.0.1:8887/activities/files>File Upload</a>
     <p/>
     <a href="http://127.0.0.1:8887/activities/files/batch?dir=./activities">Batch Upload</a>
+    <p/>
+    <a href="http://127.0.0.1:8887/activities/files/recreate?dir=./activities">Batch Recreate</a>
+
 </html>
